shared-business-infrastructure/warehousing/warehousing/k8s/warehousing-core/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: warehousing-core
  labels:
    name: warehousing-core
    environment: shared
    project: gogidix-warehousing
